[package]
name = "findmods"
version = "0.1.0"
edition = "2021"
authors = ["Tim Boudreau <tim@timboudreau.com>"]
description = """
Finds modified git checkouts.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="4.1.8", features = ["unstable-doc", "cargo"]}
walkdir = "2.3.2"
env_logger = "0.10.0"
log = "0.4.17"
gix = "0.43.1"
gix-revision="0.13.0"
git2 = "0.17.1"
